fix-bug-queryString

--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -66,6 +66,10 @@ html, body {
     font-size: 16px;
     position: relative;
   }
+
+  .button:hover{
+    color: antiquewhite;
+  }
   
   .button::before,.button::after{
     content: "";
