--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #2979FF;
+    background: #1b6ca8;
     border-radius: 4px 4px 0 0;
     height: 60px;
     width: 100%;
@@ -26,4 +26,8 @@
   
   .onlineIcon {
     margin-right: 5%;
+  }
+
+  .closeIcon {
+    margin-left:-35%;
   }
