--- a/client/src/components/Messages/Message/Message.css
+++ b/client/src/components/Messages/Message/Message.css
@@ -24,6 +24,7 @@
     justify-content: flex-end;
     padding: 0 5%;
     margin-top: 3px;
+    font-family: 'Josefin Sans', sans-serif;
   }
   
   .sentText {
