--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -15,6 +15,7 @@
     align-items: center;
     margin-left: 5%;
     color: white;
+    font-family: 'Josefin Sans', sans-serif;
   }
   
   .rightInnerContainer {
