--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,6 +1,7 @@
 .form {
     display: flex;
     border-top: 2px solid #D3D3D3;
+    
   }
   
   .input {
@@ -9,6 +10,7 @@
     padding: 5%;
     width: 80%;
     font-size: 1.2em;
+    font-family: 'Josefin Sans', sans-serif;
   }
   
   input:focus, textarea:focus, select:focus{
@@ -24,4 +26,5 @@
     display: inline-block;
     border: none;
     width: 20%;
+    font-family: 'Josefin Sans', sans-serif;
   }
